# velocileptors

./: .gitignore  .gitignore~  Direct LPT RSD Examples.ipynb  EPT Examples.ipynb  Fourier Streaming Model Example.ipynb  Gaussian Streaming Model Example.ipynb  LICENSE  LPT Examples.ipynb  LPT Moment Expansion Examples.ipynb  LPT_RSD_Optimal_Settings.ipynb  Moment Expansion Example.ipynb  README.md  Real Space CLEFT Examples.ipynb  Test Full IR Resummed EPT.ipynb  cleft_fftw.py  debug.ipynb  examples.py  fourier_streaming_model_fftw.py  gaussian_streaming_model_fftw.py  lpt_examples.py  moment_expansion_fftw.py  pnw.txt  pyproject.toml  setup.py  spherical_bessel_transform.py  spherical_bessel_transform_fftw.py  test REPT.ipynb  test spt.ipynb  wisdom.npy  zelda_wisdom.npy
.ipynb_checkpoints/: Direct LPT RSD Examples-checkpoint.ipynb  Expanded CLEFT Examples-checkpoint.ipynb  Fourier Streaming Model Example-checkpoint.ipynb  Gaussian Streaming Model Example-checkpoint.ipynb  Moment Expansion Example-checkpoint.ipynb  test REPT-checkpoint.ipynb  test spt-checkpoint.ipynb
EPT/: README.md  cleft_kexpanded_fftw.py  ept_fftw.py  ept_fullresum_fftw.py  ept_irresum_fftw.py  moment_expansion_fftw.py  velocity_moments_kexpanded_fftw.py
LPT/: README.md  cleft_fftw.py  fourier_streaming_model_fftw.py  gaussian_streaming_model_fftw.py  gaussian_streaming_model_fftw_new.py  lpt_rsd_fftw.py  moment_expansion_fftw.py  velocity_moments_fftw.py
Utils/: loginterp.py  qfuncfft.py  spherical_bessel_transform.py  spherical_bessel_transform_fftw.py
notebooks/: EPT Examples.ipynb  pk.txt  (+4 more)
(+39 files in other folders)
