[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "velocileptors"
authors = [
    {name = "Stephen Chen"},
    {name = "Martin White"},
    {name = "Zvonimir Vlah"},
    {name = "Mark Maus"}]
maintainers = [
    {name = "Stephen Chen"},
    {name = "Johannes U. Lange", email = "jlange@american.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">= 3.6"
dependencies = ["numpy", "scipy", "pyfftw"]

[project.urls]
Home = "https://github.com/sfschen/velocileptors"

[tool.flit.sdist]
exclude = ["deprecated", "notebooks", "tests", "param_plot_desi_vol.png"]
